tests/fail/ch_stable/missing_close_bracket.rs
fn main() {
    sscanf::scanf!("hi", "asdf{asdf");
}
